--- a/Exploration/NewsSummarization.ipynb
+++ b/Exploration/NewsSummarization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "112988de",
+   "id": "ef864b67",
    "metadata": {},
    "source": [
     "## Step 1. 데이터 수집하기"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "06f1710c",
+   "id": "6b4b0218",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "20cc8dad",
+   "id": "c7a09dec",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c6542653",
+   "id": "7eb3be03",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a31484",
+   "id": "90457257",
    "metadata": {},
    "source": [
     "## Step 2. 데이터 전처리하기 "
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1d2f535",
+   "id": "282467aa",
    "metadata": {},
    "source": [
     "### *2.1. 데이터 정리하기*\n",
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5d152c52",
+   "id": "6a490d0c",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "930d506d",
+   "id": "bce6d2c3",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "670dfaa8",
+   "id": "553bdfb6",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbb11e40",
+   "id": "700e4595",
    "metadata": {},
    "source": [
     "#### *텍스트 정규화와 불용어 제거*<br>\n",
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "06bb94e9",
+   "id": "a8014b5d",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6a38ce5f",
+   "id": "e64c24d6",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "338fc941",
+   "id": "dac6ee20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "72bb4a6d",
+   "id": "5b70307e",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "78710b02",
+   "id": "a4d84bee",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e706f49b",
+   "id": "13f11f51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1748d4b5",
+   "id": "2b53dbe6",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bdf4aa1d",
+   "id": "52c3d073",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "566a8be7",
+   "id": "ed1c7944",
    "metadata": {},
    "source": [
     "### *2.2.train data 와 test data 나누기*"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "224233a3",
+   "id": "5bdf4861",
    "metadata": {},
    "source": [
     "#### *샘플의 최대 길이 정하기*"
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c829eaeb",
+   "id": "f1e12164",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "da0f2ae6",
+   "id": "03c04eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b587237c",
+   "id": "aefe8367",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3417f229",
+   "id": "21e155b1",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "98f8c8e6",
+   "id": "e186e4cf",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3a197f0",
+   "id": "54291e76",
    "metadata": {},
    "source": [
     "#### *시작토큰과 종료토큰 추가하기*"
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e8b2b0e2",
+   "id": "e3b7b34b",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d41f9619",
+   "id": "8673146c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ca7e64a7",
+   "id": "c2310dbd",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "44c5eeea",
+   "id": "4d7f46ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d8642e33",
+   "id": "0f069099",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a59599ca",
+   "id": "7448dfa4",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "894abe6b",
+   "id": "d889f32e",
    "metadata": {},
    "source": [
     "### *2.3. 정수 인코딩*\n",
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2a7b133a",
+   "id": "761ea0c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b823dc73",
+   "id": "eaa35c23",
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "819fe21b",
+   "id": "a80ae0de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "49d7d908",
+   "id": "3e84fdc6",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1dcafeb1",
+   "id": "ff8837c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fc6d3147",
+   "id": "87e897ea",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "22e5edf6",
+   "id": "7669b1d7",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6707f3e9",
+   "id": "74584b12",
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cae0e04",
+   "id": "59701d23",
    "metadata": {},
    "source": [
     "#### *padding*"
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d7d81755",
+   "id": "954018ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f75a277a",
+   "id": "561010ed",
    "metadata": {},
    "source": [
     "## Step 3. 어텐션 메커니즘 사용하기 "
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b362d30",
+   "id": "9ed0f56d",
    "metadata": {},
    "source": [
     "###  *3.1. 모델 설계하기*\n",
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9b44ef01",
+   "id": "911f548f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0ded813b",
+   "id": "d8f6a935",
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a21b3b1",
+   "id": "9c5ab52b",
    "metadata": {},
    "source": [
     "#### *디코더 설계하기*"
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "a55565e5",
+   "id": "bcdd03e1",
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61c846c9",
+   "id": "74891546",
    "metadata": {},
    "source": [
     "#### *어텐션층 과 디코더의 출력층 설계하기*"
@@ -1242,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3614d1e1",
+   "id": "cb209c63",
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f63fabab",
+   "id": "89e984e9",
    "metadata": {},
    "source": [
     "### *3.2. 모델 훈련하기*"
@@ -1319,7 +1319,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e3d2b38b",
+   "id": "2ebb1aa1",
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "173f60cc",
+   "id": "bd0a25da",
    "metadata": {},
    "source": [
     "#### *과정을 시각화 하기*"
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "eec11ce5",
+   "id": "9e627586",
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02c8aec6",
+   "id": "dbef8abb",
    "metadata": {},
    "source": [
     "### *3.2. 인퍼런스 모델 구현* "
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "64d9b99a",
+   "id": "4900aaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1451,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1d037639",
+   "id": "9c2d11dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1472,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ea55ec20",
+   "id": "98840b9a",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "df026f43",
+   "id": "22c7a7e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018e376e",
+   "id": "2a7a2337",
    "metadata": {},
    "source": [
     "## Step 4. 실제 결과와 요약문 비교하기"
@@ -1568,7 +1568,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a71f0156",
+   "id": "9f5b4858",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,7 +1592,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e3435d23",
+   "id": "ee071e57",
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca4b4941",
+   "id": "b02be7df",
    "metadata": {},
    "source": [
     "## Step 5. Summa 이용해서 추출적 요약 해보기"
@@ -1871,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "536eb59d",
+   "id": "be0a82e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1882,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "dbce1f73",
+   "id": "6add4364",
    "metadata": {},
    "outputs": [
     {
@@ -1901,9 +1901,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b9fd9ea",
+   "metadata": {},
+   "source": [
+    "*데이터를 이미 전처리 해버렸기 때문에 추출적 요약을 위해 raw data 새로 불러와야함* "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "02570f99",
+   "id": "84c45af5",
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6be1a3c7",
+   "id": "e359e9e0",
    "metadata": {},
    "outputs": [
     {
@@ -1954,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "6472cd89",
+   "id": "0e897e4a",
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "fab150df",
+   "id": "13119d28",
    "metadata": {},
    "outputs": [
     {
@@ -2110,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "cb9d1b30",
+   "id": "56396ced",
    "metadata": {},
    "outputs": [
     {
@@ -2232,12 +2240,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1d99a8",
+   "id": "4608ecda",
    "metadata": {},
    "source": [
-    " - 추출적 요약 : 핵심 단어가 포함된 정도는 추상적 요약보다 높지만, 문법 완성도가 낮은 편이다.\n",
-    "\n",
-    "-  추상적 요약 : 핵심 단어가 포함된 범위는 낮은 편이지만, 실제 기사 헤드라인과 비교했을 때 문법적인 완성도가 추출적 요약에 비해 높은 편이다. 부족하지만, 추출적요약보다 더 발전할 가능성이 보인다."
+    " - 추출적 요약 : 핵심 단어가 포함된 정도는 추상적 요약에 비해 높지만, 문법 완성도가 낮아 자연스럽지 못하고 실제 헤드라인으로 쓰기에 많이 부족하다\n",
+    " - 추상적 요약 : 핵심 단어가 포함된 정도는 추출적 요약에 비해 부족하지만 , 실제 기사 헤드라인과 비교했을 때 문법적인 완성도가 추출적 요약에 비해 높은 편이라 조금 더 자연스럽게 보인다. "
    ]
   }
  ],
